Bug 363807 - Reversed sequence numbers on stack trace import
Summary: Reversed sequence numbers on stack trace import
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.19.2 (KDE Applications 16.04.2)
Platform: Other Other
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-06-01 17:57 UTC by Ralf Habacker
Modified: 2016-06-09 23:01 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.19.2 (KDE Applications 16.04.2)
Sentry Crash Report:


Attachments
stack trace file (1.54 KB, text/plain)
2016-06-01 17:57 UTC, Ralf Habacker
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2016-06-01 17:57:01 UTC
With bug 358867 support for importing stack traces has been added. Using this import the displayed sequence numbers are starting at a high value and are decremented on each following message.

Reproducible: Always

Steps to Reproduce:
1. open umbrello
2. create sequence diagram
3. import appended stack trace file

Actual Results:  
Sequence numbers are starting with high values and are decremented on each following message.

Expected Results:  
The sequence numbers should start be 1. and should be incremented on each following message.
Comment 1 Ralf Habacker 2016-06-01 17:57:25 UTC
Created attachment 99309 [details]
stack trace file
Comment 2 Ralf Habacker 2016-06-01 18:00:07 UTC
Git commit 3dd3d99df813776598e50c2012ade8ce309a0620 by Ralf Habacker.
Committed on 01/06/2016 at 17:59.
Pushed by habacker into branch 'Applications/16.04'.

Fix 'Reversed sequence numbers on stack trace import'.
 FIXED-IN:2.19.2 (KDE Applications 16.04.2)

M  +4    -3    umbrello/codeimport/import_utils.cpp

http://commits.kde.org/umbrello/3dd3d99df813776598e50c2012ade8ce309a0620
Comment 3 Ralf Habacker 2016-06-09 23:01:56 UTC
Git commit e2ee0d15126c5a6bb3389b73cb8091faee3c3d39 by Ralf Habacker.
Committed on 09/06/2016 at 21:39.
Pushed by habacker into branch 'master'.

Fix 'Reversed sequence numbers on stack trace import'.
 FIXED-IN:2.19.2 (KDE Applications 16.04.2)

M  +4    -3    umbrello/codeimport/import_utils.cpp

http://commits.kde.org/umbrello/e2ee0d15126c5a6bb3389b73cb8091faee3c3d39