Fix 'Reversed sequence numbers on stack trace import'.

BUG:363807
 FIXED-IN:2.19.2 (KDE Applications 16.04.2)